# app

./: .gitignore  README.md  dusk-design-guidelines.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.gitea/workflows/: desktop-packaging.yml
.github/workflows/: desktop-packaging.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dev_server.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  community.rs  dm.rs  gif.rs  identity.rs  mod.rs  voice.rs
src-tauri/src/crdt/: document.rs  mod.rs  sync.rs
src-tauri/src/node/: behaviour.rs  discovery.rs  gossip.rs  mod.rs  swarm.rs
src-tauri/src/protocol/: community.rs  directory.rs  gif.rs  identity.rs  messages.rs  mod.rs  turn.rs
src-tauri/src/storage/: disk.rs  mod.rs
src-tauri/src/verification/: mod.rs
src/components/auth/: HumanVerification.tsx  SignUpScreen.tsx  SplashScreen.tsx
src/components/chat/: DMSearchPanel.tsx  EmojiPicker.tsx  GifPicker.tsx  MentionList.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx  VirtualMessageList.tsx
src/lib/: avatar-svg.ts  effects-particles.ts  effects-presets.ts  effects-shapes.tsx  effects.ts  emoji-data.ts  markdown.ts  mentions.ts  notifications.ts  tauri.ts  types.ts  utils.ts  webrtc.ts
src/stores/: channels.ts  communities.ts  connection.ts  directory.ts  dms.ts  effects.ts  identity.ts  members.ts  messages.ts  settings.ts  sidebar.ts  ui.ts  voice.ts
src/styles/: app.css
(+39 files in other folders)
