[package]
name = "dusk-chat"
version = "0.1.0"
description = "peer-to-peer community platform"
authors = ["dusk"]
edition = "2021"

[lib]
name = "dusk_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# p2p networking
libp2p = { version = "0.54", features = [
  "gossipsub",
  "kad",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "dns",
  "tokio",
  "identify",
  "macros",
  "request-response",
  "cbor",
  "relay",
  "rendezvous",
  "ping",
] }

# crdt engine
automerge = "0.5"

# identity and encoding
rand = "0.8"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"

# data storage
directories = "5"

# env file support
dotenvy = "0.15"

# async utilities
futures = "0.3"

# dev-only http api (behind feature flag, never in production)
axum = { version = "0.7", optional = true }

[features]
dev-server = ["axum"]

# platform-specific: webview media permissions on linux
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
